--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "cross-env nest start",
-    "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
-    "start:debug": "cross-env nest start --debug --watch",
-    "start:prod": "cross-env node dist/main",
+    "start": "cross-env STAGE=dev nest start",
+    "start:dev": "cross-env STAGE=dev nest build --webpack --webpackPath webpack-hmr.config.js --watch",
+    "start:debug": "cross-env STAGE=dev nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "cross-env jest",
+    "test": "cross-env STAGE=dev jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -21,6 +20,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
