--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "cross-env STAGE=dev nest start",
-    "start:dev": "cross-env STAGE=dev nest build --webpack --webpackPath webpack-hmr.config.js --watch",
+    "dev": "cross-env STAGE=dev nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "cross-env STAGE=dev nest start --debug --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "cross-env STAGE=dev jest",
